# qalttab

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
assets/: config.yml
src/: args.rs  config.rs  ipc.rs  lib.rs  main.rs  qaltd.rs  ui.rs
tests/: e2e_message_flow.rs  e2e_mock_qtile.rs  ipc_integration.rs  ipc_parsing.rs  ipc_server.rs  ipc_server_integration.rs
