[package]
name = "qalttab"
version = "0.1.1"
edition = "2021"
rust-version = "1.84.1"

[dependencies]
anyhow = { version = "1.0.98" }
clap = { version = "4.5.42", features = ["derive", "string"] }
confy = { version = "1.0.0", default-features = false, features = [
  "yaml_conf",
] }
egui = { version = "0.31", features = ["callstack"] }
egui_extras = { version = "0.31", features = ["all_loaders"] }
eframe = { version = "0.31", default-features = false, features = [
  # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "wgpu",
  # "glow",
  "persistence", # Enable restoring app state when restarting the app.
] }
freedesktop-icons = { version = "0.4.0" }
indexmap = { version = "2.10", features = ["serde"] }
log = { version = "0.4.26" }
qtile-cmd-client = { git = "https://github.com/ervinpopescu/qtile-cmd-client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.142" }
simple_logger = { version = "5" }
sysinfo = { version = "0.36" }
tokio = { version = "1", features = ["full"] }
winit = { version = "0.30" }
