[package]
name = "qalttab"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive", "string"] }
confy = { version = "2", default-features = false, features = ["yaml_conf"] }
egui = { version = "0.33.2", features = ["callstack"] }
egui_extras = { version = "0.33.2", features = ["all_loaders"] }
eframe = { version = "0.33.2", features = [
  "default_fonts", # Embed the default egui fonts.
  "persistence",   # Enable restoring app state when restarting the app.
] }
freedesktop-icons = { version = "0.4" }
indexmap = { version = "2.12", features = ["serde"] }
log = { version = "0.4" }
qtile-cmd-client = { git = "https://github.com/ervinpopescu/qtile-cmd-client" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
simple_logger = { version = "5" }
sysinfo = { version = "0.37" }
tokio = { version = "1.48", features = ["full"] }
winit = { version = "0.30" }
